[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyparrm"
version = "1.0.0"
authors = [
    { name="Thomas Samuel Binns", email="t.s.binns@outlook.com" }
]
description = "A Python port of the PARRM algorithm"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pqdm"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
    "codespell",
    "pydocstyle",
    "pycodestyle",
    "sphinx",
    "numpydoc",
    "nbsphinx",
    "nbsphinx_link",
    "sphinxcontrib-bibtex",
    "sphinx-gallery",
    "pydata-sphinx-theme"
]

[project.urls]
"Homepage" = "https://github.com/neuromodulation/PyPARRM"
"Bug Tracker" = "https://github.com/neuromodulation/PyPARRM/issues"