[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyparrm"
version = "1.2.0dev"
authors = [{ name = "Thomas Samuel Binns", email = "t.s.binns@outlook.com" }]
description = "A Python port of the PARRM algorithm"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = ["numpy", "scipy", "matplotlib >= 3.7.1", "pqdm >= 0.2.0"]

[project.optional-dependencies]
dev = ["pybispectra[doc]", "pybispectra[lint]", "pybispectra[test]"]
doc = [
  "ipykernel",
  "ipython",
  "ipywidgets",
  "notebook",
  "numpydoc",
  "pydata-sphinx-theme",
  "sphinx",
  "sphinx-copybutton",
  "sphinx-gallery",
  "sphinxcontrib-bibtex",
]
lint = [
  "codespell",
  "isort",
  "pre-commit",
  "pydocstyle",
  "pydocstyle[toml]",
  "rstcheck",
  "ruff",
  "toml-sort",
  "yamllint",
]
test = ["coverage", "pytest"]

[project.urls]
"Homepage" = "https://github.com/neuromodulation/PyPARRM"
"Bug Tracker" = "https://github.com/neuromodulation/PyPARRM/issues"

[tool.codespell]
ignore-words-list = "trough"
skip = "./docs/build,./docs/source/auto_examples,./docs/source/refs.bib"

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
command_line = "-m pytest -v tests"
omit = ["__init__.py", "src/pyparrm/utils/_docs.py", "tests/*"]
source = ["pyparrm"]

[tool.isort]
profile = "black"

[tool.pydocstyle]
match-dir = "^(?!(examples|docs|tests)).*"

[tool.rstcheck]
ignore_directives = [
  "autoclass",
  "autofunction",
  "automodule",
  "autosummary",
  "bibliography",
  "cssclass",
  "currentmodule",
  "dropdown",
  "footbibliography",
  "glossary",
  "graphviz",
  "grid",
  "highlight",
  "minigallery",
  "rst-class",
  "tab-set",
  "tabularcolumns",
  "toctree",
]
ignore_messages = "^.*(Unknown target name|Undefined substitution referenced)[^`]*$"
ignore_roles = [
  "attr",
  "class",
  "doc",
  "eq",
  "exc",
  "file",
  "footcite",
  "footcite:t",
  "func",
  "gh",
  "kbd",
  "meth",
  "mod",
  "newcontrib",
  "pr",
  "py:mod",
  "ref",
  "samp",
  "term",
]
report_level = "WARNING"

[tool.ruff]
extend-exclude = ["docs"]
line-length = 88

[tool.ruff.lint.per-file-ignores]
"*.py" = ["E203", "E741"]
"__init__.py" = ["F401"]

[tool.tomlsort]
all = true
ignore_case = true
trailing_comma_inline_array = true
